[metadata]
name = linux2mqtt
version = 1.1.0a1
author = Cyrill Raccaud
author_email = cyrill.raccaud+pypi@gmail.com
description = Send your linux stats and and events to mqtt and discovery them in home assistant.
long_description = file: README.md, CHANGELOG.md, LICENCE
long_description_content_type = text/markdown
license_files = LICENSE
keywords = 
  mqtt
  psutil
  metrics
  linux
url = https://github.com/miaucl/linux2mqtt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Topic :: System :: Monitoring
    Topic :: System :: Logging
    Topic :: System :: Systems Administration

[project.urls]
Documentation = "https://miaucl.github.io/linux2mqtt/"
Source = "https://github.com/miaucl/linux2mqtt"
Issues = "https://github.com/miaucl/linux2mqtt/issues"


[options]
packages = 
    linux2mqtt
python_requires = >=3.11
install_requires =
    jsons
    psutil
    paho-mqtt
    numpy
    typing-extensions

include_package_data = True

[options.package_data]
linux2mqtt = py.typed


[options.entry_points]
console_scripts =
  linux2mqtt = linux2mqtt.linux2mqtt:main